# realmpp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
include/realmpp/algo/: bresenham.hpp
include/realmpp/core/: bounding_box.hpp  grid.hpp  point.hpp  rng_engine.hpp  traits.hpp
tests/algo/: bresenham_test.cpp
tests/core/: bounding_box_test.cpp  grid_test.cpp  point_test.cpp  rng_engine_test.cpp  traits_test.cpp
